# simple-merkle-tree

./: Cargo.toml  README.md
src/: lib.rs
